# me88

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common/: opcode.cpp  opcode.h
compiler/: .gitignore  README.MD
compiler/src/: CMakeLists.txt  ast.cpp  ast.h  codegenerator.cpp  codegenerator.h  codeparse.cpp  codeparse.h  francescarompe.txt  lexy.cpp  lexy.h  main.cpp  parser.cpp  parser.h  semantic.cpp  semantic.h  symbolstable.cpp  symbolstable.h  symboltable.cpp  symboltable.h  token.cpp  token.h  tree.cpp  tree.h
compiler/src/debugprograms/: debug.F7  debug.F7.ir
compiler/src/tests/: astTests.cpp  codegeneratorTests.h  common.h  filereader.cpp  filereader.h  generateCodeTests.cpp  irTests.cpp  lexerTests.cpp  machineCodeTests.cpp  mainTest.cpp
compiler/src/tests/files/: lexerAllTokenTest.F7
compiler/src/tests/files/ast/: ifElseTest.F7  ifNoElse.F7  ifNoElseTest.F7  u8FunNoArgs.F7  u8FunWithArgs.F7  variableDeclarationAssignementTest.F7  variableExpressionsTest.F7  voidWithArgs.F7  voidWithArgsTest.F7  whileTest.F7
compiler/src/tests/files/ir/: emptyVoidTest.F7.ir  ifElseTest.F7.ir  ifNoElseTest.F7.ir  variableDeclarationAssignementTest.F7.ir  variableDeclarationTest.F7.ir  variableExpressionsTest.F7.ir  voidWithArgsTest.F7.ir  whileTest.F7.ir
compiler/src/tests/programs/ast/: emptyVoid.F7  ifElse.F7  u8FunWithArgs.F7  while.F7
irCompiler/: fileReader.cpp  fileReader.h  main.cpp  programGenerator.cpp  programGenerator.h  stackTracker.cpp  stackTracker.h  symbolTable.cpp  symbolTable.h  variableTable.cpp  variableTable.h
irCompiler/debug/: main.cpp  main.ll  main.ll.me88asm  main.ll.me88bin
irCompiler/instructions/: alloca.cpp  alloca.h  functionDefinition.cpp  functionDefinition.h  instruction.cpp  instruction.h  instructionFactory.cpp  instructionFactory.h  load.cpp  load.h  sext.cpp  sext.h  store.cpp  store.h
irCompiler/tests/: allocaTests.cpp  fileReaderTests.cpp  functionTests.cpp  instructionFactoryTests.cpp  instructionTests.cpp  loadTests.cpp  mainTests.cpp  programGeneratorTests.cpp  sextTests.cpp  storeTests.cpp  symbolTableTests.cpp
irCompiler/tests/files/: comments.ll  fileReader.txt  mainLoadSomething.ll  mainLoadSomething.me88asm  mainLoadSomething.me88bin  mainReturnsZero.ll  mainReturnsZero.me88asm  mainReturnsZero.me88bin
pc/: README.MD
pc/src/: CMakeLists.txt  bus.cpp  bus.h  instruction.cpp  instruction.h  main.cpp  memdevice.cpp  memdevice.h  microPC.cpp  microPC.h  printer.cpp  printer.h  processor.cpp  processor.h
programs/: eprom.F7
